--- a/src/contents/ui/config.ui
+++ b/src/contents/ui/config.ui
@@ -205,14 +205,39 @@
               </property>
              </widget>
             </item>
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_43">
+              <property name="text">
+               <string>Moved window visibility</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1">
+             <widget class="QComboBox" name="kcfg_windowVisibility">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <item>
+               <property name="text">
+                <string>Always visible</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Hidden while tiler is visible</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Hidden while above tiler</string>
+               </property>
+              </item>
+             </widget>
+            </item>
            </layout>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="kcfg_hideWindowWhileMoving">
-            <property name="text">
-             <string>Hide window while moving it. The window will be visible as normal when the tiler is not visible due to any of the visibility settings.</string>
-            </property>
-           </widget>
           </item>
          </layout>
         </widget>
